src/objects/ResourceRequest__c.object
<CustomObject>
    <description>A request for resources to staff an event.</description>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Please provide details that are specific to the demo such as the goal of the meeting, description of the audience, line of business, states, etc.</inlineHelpText>
        <label>Description</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Event_Goals__c</fullName>
        <label>Event Goals</label>
        <length>1500</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Event_Hours__c</fullName>
        <description>Totals Hours in front of the customer</description>
        <label>Event Hours</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <label>Event Type</label>
        <picklist>
            <picklistValues>
                <fullName>Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demonstration</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Discovery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Sale Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proof of Concept</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFI / RFP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Drive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value Consulting Workshop</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FeedAnnouncementID__c</fullName>
        <description>Stores the ID of the feed post to the group accouncement.</description>
        <label>FeedAnnouncementID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <inlineHelpText>Location of the event.  Leave blank if Presentation Type is Remote.</inlineHelpText>
        <label>Location</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Resource Requests</relationshipLabel>
        <relationshipName>Resource_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Presentation_Type__c</fullName>
        <label>Presentation Type</label>
        <picklist>
            <picklistValues>
                <fullName>On-site</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Remote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HQ Visit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RFx_External_Due__c</fullName>
        <label>RFP External Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RFx_Internal_Due__c</fullName>
        <label>RFP Internal Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RFx_Received__c</fullName>
        <label>RFP Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RolesAsString__c</fullName>
        <label>Roles List</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fully Staffed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revoked</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Resource Request</label>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resource Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>